# codebase-architect

./: PLAN.md  README.md  SKILL.md  builder-agent-ethics.md  deepdive-template.md  judge-prompt.md  language-detection.md  overview-template.md  pensieve-context.md  synthesis-template.md
cursor/: SKILL.md
pensieve/python/: .gitignore  README.md  pyproject.toml
pensieve/python/src/pensieve/: __init__.py  __main__.py  _version.py  cache.py  checkpoint.py  cli.py  context.py  docgen.py  graph.py  hooks.py  route.py  routing.py  scan.py  schema.py
pensieve/python/src/pensieve/benchmark/: __init__.py  executor.py  generate.py  history.py  judge.py  metrics.py  runner.py  tasks.py  template.py
pensieve/python/tests/: conftest.py  test_a8_a9_review_fixes.py  test_anon_default_export.py  test_benchmark_cli.py  test_benchmark_executor.py  test_benchmark_generate.py  test_benchmark_history.py  test_benchmark_judge.py  test_benchmark_metrics.py  test_benchmark_modes.py  test_benchmark_parallel.py  test_benchmark_runner.py  test_benchmark_tasks.py  test_benchmark_template.py  test_cache.py  test_checkpoint.py  test_cli.py  test_codex_review_fixes.py  test_comments.py  test_context.py  test_docgen.py  test_extractor_go.py  test_extractor_java.py  test_extractor_javascript.py  test_extractor_python.py  test_extractor_rust.py  test_extractor_typescript.py  test_final_b_review.py  test_graph.py  test_hooks.py  test_language_parsers.py  test_phase_a_review_fixes.py  test_phase_b_review_fixes.py  test_reexports.py  test_review_round2_fixes.py  test_review_round3_fixes.py  test_route.py  test_routing.py  test_scan.py  test_schema.py  (+2 more)
(+127 files in other folders)
