[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "code-pensieve"
version = "0.0.1"
description = "A vessel for codebase memories. Coding agents draw from the store on demand instead of re-experiencing the original event."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Lalit Verma" },
]
keywords = [
  "coding-agent",
  "codebase-analysis",
  "ast",
  "claude-code",
  "developer-tools",
]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development",
  "Topic :: Software Development :: Documentation",
]
dependencies = [
  "tree-sitter>=0.23",
  "tree-sitter-python>=0.23",
  "tree-sitter-javascript>=0.23",
  "tree-sitter-typescript>=0.23",
  "tree-sitter-go>=0.23",
  "tree-sitter-java>=0.23",
  "tree-sitter-rust>=0.23",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "pytest-cov>=4.0",
]

[project.scripts]
pensieve = "pensieve.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/pensieve"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-ra --strict-markers"
